# toyLIFE_simulator

./: .gitignore  .pre-commit-config.yaml  README.md  classes.py  main.py  meson.build  pyproject.toml
.github/workflows/: build_cpp.yml
archive/cpp/: classes.cpp  main.cpp
archive/cpp/functions/: func.h
archive/python/functions/: func.py
cpp/: classes.cpp  main.cpp
cpp/functions/: func.h
functions/: func.py
libs/cpp/: meson.build
libs/cpp/toylife/: meson.build
libs/cpp/toylife/data/data/: dimers.txt  protein_gene.txt
libs/cpp/toylife/include/: helper_functions.h  toy_plugin.h
libs/cpp/toylife/src/: helper_functions.cpp  toy_plugin.cpp
libs/python/archive_library/: distance.py  graphs.py
libs/python/graphs/: config.py  data_frames.py  food.py  general_functions.py  plots.py  total.py
modules/: meson.build
modules/simple_simulator/: meson.build
modules/simple_simulator/src/: classes.cpp  func.cpp  func.h  globals.cpp  globals.h  main.cpp
modules/toylife_simulator/: meson.build
modules/toylife_simulator/src/: classes.cpp  classes.h  func.cpp  func.h  globals.cpp  globals.h  main.cpp
python/: classes.py  main.py
python/functions/: func.py
simulations/: glosary.md
simulations/simulation1/: classes.cpp  main.cpp  study.ipynb
simulations/simulation1/data/: Description.md  Readme.md  food_info1.csv  food_info_75.csv  food_stats_0_25.csv  food_total_0_25.csv  food_total_0_75.csv  genotype_info1.csv  genotype_info2.csv  genotype_info_0_25.csv  genotype_info_0_75.csv  genotype_info_75.csv  population_info1.csv  population_info2.csv  population_info_0_25.csv  population_info_0_75.csv  population_info_75.csv  total_0_25.csv
simulations/simulation1/functions/: distance.py  func.h  globals.cpp  globals.h  graphs.py
simulations/with_toyLife/: __main__.py  classes.cpp  classes.h  graphs.py  main  main.cpp  makefile
simulations/with_toyLife/ForGraphs/: data_frames.py  food.py  general_functions.py  operations.py  plots.py  total.py
simulations/with_toyLife/ForGraphs/operations/: food.py
simulations/with_toyLife/data/: Readme.md  energies_15_0_5.csv  sizes_0_5.csv
simulations/with_toyLife/data/simulation_0/: energies.csv  sizes.csv  total.csv
simulations/with_toyLife/data/simulation_1/: energies.csv  sizes.csv  total.csv
simulations/with_toyLife/data/simulation_10/: Readme.md  energies.csv  food_total.csv  sizes.csv  total.csv
simulations/with_toyLife/data/simulation_11/: Readme.md  energies.csv  food_total.csv  sizes.csv  total.csv
simulations/with_toyLife/data/simulation_12/: Readme.md  energies.csv  food_total.csv  sizes.csv  total.csv
simulations/with_toyLife/data/simulation_13/: Readme.md  energies.csv  food_total.csv  sizes.csv  total.csv
simulations/with_toyLife/data/simulation_14/: Readme.md  energies.csv  food_total.csv  sizes.csv  total.csv
simulations/with_toyLife/data/simulation_15/: Readme.md  energies.csv  food_total.csv  sizes.csv  total.csv
simulations/with_toyLife/data/simulation_16/: Readme.md  energies.csv  food_total.csv  sizes.csv  total.csv
simulations/with_toyLife/data/simulation_17/: Readme.md  energies.csv  (+2 more)
simulations/with_toyLife/for graphs/: config.py  data_frames.py  general_functions.py  plots.py
simulations/with_toyLife/functions/: func.cpp  func.h  globals.cpp  globals.h
simulations/with_toyLife/toylife/: helper_functions.h  toy_plugin.cpp  toy_plugin.h
with_toyLife/functions/: func.h
(+95 files in other folders)
